--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ footer i {
     <div class="container-fluid">
         <!-- Logo with Image -->
         <a class="navbar-brand" href="#">
-            <img src="logos\WhatsApp Image 2024-10-18 at 19.21.58 (1).jpeg" alt="Company Logo"> <!-- Add your logo image -->
+            <img src="https://github.com/Bhushan-24/mmr/blob/main/WhatsApp%20Image%202024-10-18%20at%2019.21.58%20(1).jpeg" alt="Company Logo"> <!-- Add your logo image -->
             MMRTECHSOLUTIONS
         </a>
        
